deploy: 09f639a5db61f5f0dbbc0ee6ea66c05a6b4ac60d

--- a/callback.html
+++ b/callback.html
@@ -122,6 +122,8 @@
                   window.location.href = url_redirect
               }).catch(function (error) {
                   console.log(error)
+                  var url_redirect = window.location.origin
+                  window.location.href = url_redirect
               })
 
     }
