--- a/callback.html
+++ b/callback.html
@@ -45,7 +45,7 @@
         const token_endpoint = localStorage.getItem('token_endpoint');;
         const userinfo_endpoint = localStorage.getItem('url_user_info');;
         if(baseUrl.includes('egi.eu')){
-          scope = 'openid profile email eduperson_entitlement';
+          scope = 'openid profile email entitlements';
         }else{
           scope = 'openid profile email';
         }
