deploy: f8a2ab1fa7d3393bfac35c28881c6c693908335f

--- a/callback.html
+++ b/callback.html
@@ -45,7 +45,7 @@
         const token_endpoint = localStorage.getItem('token_endpoint');;
         const userinfo_endpoint = localStorage.getItem('url_user_info');;
         if(baseUrl.includes('egi.eu')){
-          scope = 'openid profile email entitlements';
+          scope = 'openid profile email entitlements eduperson_entitlement';
         }else{
           scope = 'openid profile email';
         }
